--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   },
   "homepage": "https://github.com/magalhas/express-react-engine",
   "peerDependencies": {
-    "react": "^15.0",
-    "react-dom": "^15.0"
+    "react": "^0.14.0 || ^15.0.0",
+    "react-dom": "^0.14.0 || ^15.0.0"
   },
   "dependencies": {
     "babel-core": "^6.0.0",
